# ValueInvestorsClub

./: .gitignore  CLAUDE.md  ProcessLinks.py  README.md  SchemaDescription.md  describeSchema.sh  docker-compose.test.yml  docker-compose.yml  idea_links-01-28-2020.txt  idea_links-02-05-2008.txt  idea_links-04-27-2003.txt  idea_links-07-15-2020.txt  idea_links-10-03-2017.txt  idea_links-10-08-2014.txt  idea_links-10-26-2011.txt  idea_links-12-01-2022.txt  idea_links_no_duplicates.txt  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  run_tests_docker.sh  scraper.py  startScript.sh  test-requirements.txt
.github/workflows/: ci-fixed.yml  ci.yml  docker-tests.yml  tests.yml
ValueInvestorsClub/: scrapy.cfg
ValueInvestorsClub/ValueInvestorsClub/: items.py  middlewares.py  pipelines.py  settings.py
api/: Dockerfile  __init__.py  debug_api.py  main.py  requirements.txt  run_server.py  test_detail.py  test_idea_endpoint.py  validate_schema.py
api/database/: __init__.py  connection.py
api/models/: __init__.py
api/routes/: __init__.py  companies.py  health.py  ideas.py  users.py
api/schema/: openapi.json
api/schemas/: __init__.py  schemas.py
api/tests/: README.md  __init__.py  conftest.py  setup_test_db.py  test_ideas_api.py  test_load_more_button.py  test_schemas.py
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  cypress.config.ts  index.html  init-frontend.sh  jest.config.js  nginx.conf  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
(+34 files in other folders)
