[project]
name = "valueinvestorsclub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "pandas>=2.2.3",
    "psycopg>=3.2.3",
    "pydantic>=2.0.0",
    "selenium>=4.27.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.27.0",
]
