[project]
name = "valueinvestorsclub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "psycopg>=3.2.3",
    "pydantic>=2.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "selenium>=4.27.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.27.0",
]
